Bug 832745 - Adding a principal for a stream when creating. r=roc